--- a/style.css
+++ b/style.css
@@ -96,4 +96,46 @@ body main section p {
   margin: 30px 0;
 }
 
+@media (max-width: 500px) {
+  body {
+    display: block;
+  }
+  body main {
+    display: block;
+    width: fit-content;
+    height: 100%;
+    border-radius: 0%;
+    box-shadow: none;
+  }
+  body main aside {
+    width: 100%;
+    margin-top: 150px;
+    padding: 0;
+    border-radius: 0%;
+  }
+  body main aside .info {
+    margin: 20px 0;
+  }
+  body main aside .social-networks {
+    margin: 30px 0 20px 0;
+  }
+  body main section {
+    width: fit-content;
+    padding: 0 20px;
+  }
+  body main section .greeting {
+    position: absolute;
+    top: 0;
+  }
+  body main section .greeting h1 {
+    font-size: 2.5rem;
+  }
+  body main section .greeting hr {
+    display: none;
+  }
+  body main section p {
+    font-size: 1rem;
+  }
+}
+
 /*# sourceMappingURL=style.css.map */
