--- a/style.scss
+++ b/style.scss
@@ -113,3 +113,47 @@ body {
         }
     }
 }
+
+@media (max-width: 500px){
+    body {
+        display: block;
+        main {
+            display: block;
+            width: fit-content;
+            height: 100%;
+            border-radius: 0%;
+            box-shadow: none;
+            aside {
+                width: 100%;
+                margin-top: 150px;
+                padding: 0;
+                border-radius: 0%;
+                .info {
+                    
+                    margin: 20px 0;
+                }
+                .social-networks {
+                    margin: 30px 0 20px 0;
+                }
+            }
+            section {
+                width: fit-content;
+                padding: 0 20px;
+                .greeting {
+                    position: absolute;
+                    top: 0;
+                    h1 {
+                        font-size: 2.5rem;
+                    }
+                    hr {
+                        display: none;
+                    }
+                }
+                p {
+                    font-size: 1rem;
+                }
+            }
+        }
+    }
+    
+}
