--- a/style.css
+++ b/style.css
@@ -112,6 +112,7 @@ body main section p {
     margin-top: 150px;
     padding: 0;
     border-radius: 0%;
+    font-size: 1rem;
   }
   body main aside .info {
     margin: 20px 0;
