--- a/style.scss
+++ b/style.scss
@@ -128,6 +128,7 @@ body {
                 margin-top: 150px;
                 padding: 0;
                 border-radius: 0%;
+                font-size: 1rem;
                 .info {
                     
                     margin: 20px 0;
