--- a/style.scss
+++ b/style.scss
@@ -104,6 +104,9 @@ body {
                         font-weight: 100;
                     }
                 }
+                hr {
+                    width: 85%;
+                }
             }
 
             p {
@@ -114,7 +117,7 @@ body {
     }
 }
 
-@media (max-width: 450px){
+@media (max-width: 450px) {
     body {
         display: block;
         main {
@@ -125,24 +128,33 @@ body {
             box-shadow: none;
             aside {
                 width: 100%;
-                margin-top: 150px;
+                margin-top: 130px;
                 padding: 0;
                 border-radius: 0%;
                 .info {
+                    width: 100%;
                     font-size: 1rem;
-                    margin: 20px 0;
+                    padding: 0 30px;
+                    justify-content: space-between;
+                    .info__content {
+                        margin-right: 40px;
+                    }
                 }
                 .social-networks {
-                    margin: 30px 0 20px 0;
+                    width: 100%;
+                    padding: 0 30px;
+                    margin: 20px 0 20px 0;
+                    justify-content: space-around;
                 }
             }
             section {
                 width: fit-content;
-                padding: 0 20px;
+                padding: 0 30px;
                 .greeting {
                     position: absolute;
                     top: 0;
                     h1 {
+                        margin: 10px 0 10px 0;
                         font-size: 2.5rem;
                     }
                     hr {
@@ -155,5 +167,4 @@ body {
             }
         }
     }
-    
 }
