--- a/style.css
+++ b/style.css
@@ -91,6 +91,9 @@ body main section .greeting h1 span {
   font-family: "Roboto", sans-serif;
   font-weight: 100;
 }
+body main section .greeting hr {
+  width: 85%;
+}
 body main section p {
   font-size: 1rem;
   margin: 30px 0;
@@ -109,26 +112,35 @@ body main section p {
   }
   body main aside {
     width: 100%;
-    margin-top: 150px;
+    margin-top: 130px;
     padding: 0;
     border-radius: 0%;
   }
   body main aside .info {
+    width: 100%;
     font-size: 1rem;
-    margin: 20px 0;
+    padding: 0 30px;
+    justify-content: space-between;
+  }
+  body main aside .info .info__content {
+    margin-right: 40px;
   }
   body main aside .social-networks {
-    margin: 30px 0 20px 0;
+    width: 100%;
+    padding: 0 30px;
+    margin: 20px 0 20px 0;
+    justify-content: space-around;
   }
   body main section {
     width: fit-content;
-    padding: 0 20px;
+    padding: 0 30px;
   }
   body main section .greeting {
     position: absolute;
     top: 0;
   }
   body main section .greeting h1 {
+    margin: 10px 0 10px 0;
     font-size: 2.5rem;
   }
   body main section .greeting hr {
