--- a/style.css
+++ b/style.css
@@ -99,55 +99,56 @@ body main section p {
   margin: 30px 0;
 }
 
-@media (max-width: 450px) {
+@media (max-width: 480px) {
   body {
     display: block;
+    width: 100%;
+    overflow-x: hidden;
   }
   body main {
     display: block;
-    width: fit-content;
-    height: 100%;
+    width: 480px;
+    margin: auto;
     border-radius: 0%;
     box-shadow: none;
   }
   body main aside {
+    margin: 100px 0 0 0;
     width: 100%;
-    margin-top: 130px;
-    padding: 0;
     border-radius: 0%;
+    padding: 0 30px;
   }
   body main aside .info {
     width: 100%;
     font-size: 1rem;
-    padding: 0 30px;
     justify-content: space-between;
   }
+  body main aside .info .info__headings h4 {
+    margin: 20px 0;
+  }
   body main aside .info .info__content {
-    margin-right: 40px;
+    margin-right: 60px;
   }
   body main aside .social-networks {
-    width: 100%;
-    padding: 0 30px;
     margin: 20px 0 20px 0;
-    justify-content: space-around;
   }
   body main section {
-    width: fit-content;
+    width: 100%;
+    margin: 0;
     padding: 0 30px;
+    border-radius: 0%;
   }
   body main section .greeting {
+    margin-top: 10px;
     position: absolute;
     top: 0;
   }
   body main section .greeting h1 {
-    margin: 10px 0 10px 0;
+    margin: 10px 0;
     font-size: 2.5rem;
   }
   body main section .greeting hr {
     display: none;
-  }
-  body main section p {
-    font-size: 1rem;
   }
 }
 
