--- a/style.scss
+++ b/style.scss
@@ -117,52 +117,57 @@ body {
     }
 }
 
-@media (max-width: 450px) {
+@media (max-width: 480px){
     body {
         display: block;
+        width: 100%;
+        overflow-x: hidden;
         main {
             display: block;
-            width: fit-content;
-            height: 100%;
+            width: 480px;
+            margin: auto;
             border-radius: 0%;
             box-shadow: none;
             aside {
+                margin: 100px 0 0 0;
                 width: 100%;
-                margin-top: 130px;
-                padding: 0;
                 border-radius: 0%;
+                padding: 0 30px;
                 .info {
                     width: 100%;
                     font-size: 1rem;
-                    padding: 0 30px;
                     justify-content: space-between;
-                    .info__content {
-                        margin-right: 40px;
+                    .info__headings {
+                        h4 {
+                            margin: 20px 0;
+                        }
                     }
+                    .info__content {
+                        margin-right: 60px;
+                    }
+                    
                 }
                 .social-networks {
-                    width: 100%;
-                    padding: 0 30px;
-                    margin: 20px 0 20px 0;
-                    justify-content: space-around;
+                    margin:  20px 0 20px 0;
                 }
             }
+
             section {
-                width: fit-content;
+                width: 100%;
+                margin: 0;
                 padding: 0 30px;
+                border-radius: 0%;
                 .greeting {
+                    margin-top: 10px;
                     position: absolute;
                     top: 0;
                     h1 {
-                        margin: 10px 0 10px 0;
+                        margin: 10px 0;
                         font-size: 2.5rem;
                     }
                     hr {
                         display: none;
                     }
-                }
-                p {
-                    font-size: 1rem;
                 }
             }
         }
