--- a/style.css
+++ b/style.css
@@ -99,21 +99,22 @@ body main section p {
   margin: 30px 0;
 }
 
-@media (max-width: 480px) {
+@media screen and (max-width: 480px) {
   body {
     display: block;
     width: 100%;
+    height: 100%;
     overflow-x: hidden;
   }
   body main {
     display: block;
-    width: 480px;
+    width: 100%;
     margin: auto;
     border-radius: 0%;
     box-shadow: none;
   }
   body main aside {
-    margin: 100px 0 0 0;
+    margin: 110px 0 0 0;
     width: 100%;
     border-radius: 0%;
     padding: 0 30px;
@@ -124,22 +125,23 @@ body main section p {
     justify-content: space-between;
   }
   body main aside .info .info__headings h4 {
-    margin: 20px 0;
+    margin: 20px 20px 20px 0;
   }
   body main aside .info .info__content {
     margin-right: 60px;
   }
   body main aside .social-networks {
+    font-size: 1.1rem;
     margin: 20px 0 20px 0;
   }
   body main section {
     width: 100%;
-    margin: 0;
+    margin: 20px 0 20px 0;
     padding: 0 30px;
     border-radius: 0%;
   }
   body main section .greeting {
-    margin-top: 10px;
+    margin-top: 20px;
     position: absolute;
     top: 0;
   }
