--- a/style.scss
+++ b/style.scss
@@ -117,19 +117,23 @@ body {
     }
 }
 
-@media (max-width: 480px){
+@media screen and (max-width: 480px){
+
     body {
         display: block;
         width: 100%;
+        height: 100%;
         overflow-x: hidden;
+
         main {
             display: block;
-            width: 480px;
+            width: 100%;
+            
             margin: auto;
             border-radius: 0%;
             box-shadow: none;
             aside {
-                margin: 100px 0 0 0;
+                margin: 110px 0 0 0;
                 width: 100%;
                 border-radius: 0%;
                 padding: 0 30px;
@@ -139,7 +143,7 @@ body {
                     justify-content: space-between;
                     .info__headings {
                         h4 {
-                            margin: 20px 0;
+                            margin: 20px 20px 20px 0;
                         }
                     }
                     .info__content {
@@ -148,17 +152,18 @@ body {
                     
                 }
                 .social-networks {
+                    font-size: 1.1rem;
                     margin:  20px 0 20px 0;
                 }
             }
 
             section {
                 width: 100%;
-                margin: 0;
+                margin: 20px 0 20px 0;
                 padding: 0 30px;
                 border-radius: 0%;
                 .greeting {
-                    margin-top: 10px;
+                    margin-top: 20px;
                     position: absolute;
                     top: 0;
                     h1 {
