--- a/styles/style1/style.css
+++ b/styles/style1/style.css
@@ -7,7 +7,7 @@
 body {
   height: 100vh;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   font-family: "Roboto Serif", serif;
   color: #b8b8b8;
 }
@@ -29,7 +29,7 @@ body main aside {
   width: 30%;
   background-color: #f9f9f9;
   border-radius: 25px 0 0 25px;
-  padding: 100px 50px 50px 50px;
+  padding: 70px 50px 50px 50px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -74,7 +74,7 @@ body main aside .social-networks a {
 body main section {
   width: 70%;
   border-radius: 0 25px 25px 0;
-  padding: 100px 100px 50px 50px;
+  padding: 70px 100px 50px 50px;
 }
 body main section .greeting {
   margin-top: 30px;
@@ -95,8 +95,17 @@ body main section .greeting hr {
   width: 85%;
 }
 body main section p {
-  font-size: 1rem;
+  font-size: 0.9rem;
+  line-height: 18px;
   margin: 30px 0;
+}
+body footer {
+  background-color: #b8b8b8;
+  padding: 20px;
+  text-align: center;
+}
+body footer a {
+  color: #f9f9f9;
 }
 
 @media screen and (max-width: 480px) {
