--- a/style/style.css
+++ b/style/style.css
@@ -8,12 +8,11 @@ body {
   height: 100vh;
   display: flex;
   flex-direction: column;
-  font-family: "Roboto Serif", serif;
   color: #b8b8b8;
 }
-body h1,
-body h4 {
+body h1, body h4 {
   color: #2e2e2e;
+  font-family: "Roboto";
 }
 body .flexboxlayout {
   align-self: center;
@@ -28,7 +27,7 @@ body .flexboxlayout aside {
   width: 30%;
   background-color: #f9f9f9;
   border-radius: 25px 0 0 25px;
-  padding: 5%;
+  padding: 4%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -46,22 +45,27 @@ body .flexboxlayout aside .info {
   flex-direction: row;
   justify-content: space-around;
   width: 100%;
-  font-size: 0.7vw;
 }
-body .flexboxlayout aside .info .info__headings {
-  text-transform: uppercase;
+body .flexboxlayout aside .info .info__headings .flex {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  margin: 20px 0;
+  width: 100%;
 }
-body .flexboxlayout aside .info .info__headings h4 {
+body .flexboxlayout aside .info .info__headings .flex h4 {
   line-height: 14px;
   font-family: "Roboto", sans-serif;
   color: #2e2e2e;
-  margin: 20px 0.7vw 20px 0;
 }
-body .flexboxlayout aside .info .info__content p {
-  line-height: 14px;
-  margin: 20px 0 20px 0;
+body .flexboxlayout aside .info .info__headings .flex .info__content {
+  color: #b8b8b8;
+  font-family: "Roboto Serif", serif;
+  font-weight: 400;
+  word-break: break-all;
 }
-body .flexboxlayout aside .info .info__content p a {
+body .flexboxlayout aside .info .info__headings .flex .info__content a {
   color: #b8b8b8;
 }
 body .flexboxlayout aside .social-networks {
@@ -101,7 +105,7 @@ body .flexboxlayout section .greeting hr {
   width: 85%;
 }
 body .flexboxlayout section p {
-  font-size: 0.9rem;
+  font-size: 18px;
   line-height: 18px;
   margin: 30px 0;
 }
@@ -146,7 +150,8 @@ body .floatlayout section {
     height: 100%;
     overflow-x: hidden;
   }
-  body .flexboxlayout, body .floatlayout {
+  body .flexboxlayout,
+body .floatlayout {
     display: block;
     width: 100%;
     min-width: 100%;
@@ -154,46 +159,56 @@ body .floatlayout section {
     border-radius: 0%;
     box-shadow: none;
   }
-  body .flexboxlayout aside, body .floatlayout aside {
+  body .flexboxlayout aside,
+body .floatlayout aside {
     margin: 110px 0 0 0;
     width: 100%;
     border-radius: 0%;
     padding: 0 30px;
   }
-  body .flexboxlayout aside img, body .floatlayout aside img {
+  body .flexboxlayout aside img,
+body .floatlayout aside img {
     max-width: 50%;
   }
-  body .flexboxlayout aside .info, body .floatlayout aside .info {
+  body .flexboxlayout aside .info,
+body .floatlayout aside .info {
     width: 100%;
     font-size: 4vw;
     justify-content: space-between;
   }
-  body .flexboxlayout aside .info .info__headings h4, body .floatlayout aside .info .info__headings h4 {
+  body .flexboxlayout aside .info .info__headings h4,
+body .floatlayout aside .info .info__headings h4 {
     margin: 20px 35px 20px 0;
   }
-  body .flexboxlayout aside .info .info__content, body .floatlayout aside .info .info__content {
+  body .flexboxlayout aside .info .info__content,
+body .floatlayout aside .info .info__content {
     margin-right: 60px;
   }
-  body .flexboxlayout aside .social-networks, body .floatlayout aside .social-networks {
+  body .flexboxlayout aside .social-networks,
+body .floatlayout aside .social-networks {
     font-size: 1.1rem;
     margin: 20px 0 20px 0;
   }
-  body .flexboxlayout section, body .floatlayout section {
+  body .flexboxlayout section,
+body .floatlayout section {
     width: 100%;
     margin: 10px 0 10px 0;
     padding: 0 30px;
     border-radius: 0%;
   }
-  body .flexboxlayout section .greeting, body .floatlayout section .greeting {
+  body .flexboxlayout section .greeting,
+body .floatlayout section .greeting {
     margin-top: 20px;
     position: absolute;
     top: 0;
   }
-  body .flexboxlayout section .greeting h1, body .floatlayout section .greeting h1 {
+  body .flexboxlayout section .greeting h1,
+body .floatlayout section .greeting h1 {
     margin: 10px 0;
     font-size: 9vw;
   }
-  body .flexboxlayout section .greeting hr, body .floatlayout section .greeting hr {
+  body .flexboxlayout section .greeting hr,
+body .floatlayout section .greeting hr {
     display: none;
   }
   body footer {
