--- a/style/style.scss
+++ b/style/style.scss
@@ -14,11 +14,10 @@ body {
     height: 100vh;
     display: flex;
     flex-direction: column;
-    font-family: $text-font;
     color: $text-color;
-    h1,
-    h4 {
+    h1, h4 {
         color: $primary-color;
+        font-family: 'Roboto';
     }
     .flexboxlayout {
         align-self: center;
@@ -33,7 +32,7 @@ body {
             width: 30%;
             background-color: $additional-color;
             border-radius: 25px 0 0 25px;
-            padding: 5%;
+            padding: 4%;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -51,24 +50,28 @@ body {
                 flex-direction: row;
                 justify-content: space-around;
                 width: 100%;
-                font-size: 0.7vw;
                 .info__headings {
-                    text-transform: uppercase;
-                    h4 {
-                        line-height: 14px;
-                        font-family: $title-font;
-                        color: $primary-color;
-                        margin: 20px 0.7vw 20px 0;
-                    }
-                }
-
-                .info__content {
-                    p {
-                        line-height: 14px;
-                        margin: 20px 0 20px 0;
-
-                        a {
+                    .flex {
+                        display: flex;
+                        flex-direction: row;
+                        flex-wrap: wrap;
+                        justify-content: flex-start;
+                        margin: 20px 0;
+                        width: 100%;
+                        h4 {
+                            line-height: 14px;
+                            font-family: $title-font;
+                            color: $primary-color;
+                        }
+                        .info__content {
                             color: $text-color;
+                            font-family: $text-font;
+                            font-weight: 400;
+                            word-break: break-all;
+                            a {
+                                color: $text-color;
+                                
+                            }
                         }
                     }
                 }
@@ -114,7 +117,7 @@ body {
             }
 
             p {
-                font-size: 0.9rem;
+                font-size: 18px;
                 line-height: 18px;
                 margin: 30px 0;
             }
@@ -165,7 +168,8 @@ body {
         height: 100%;
         overflow-x: hidden;
 
-        .flexboxlayout, .floatlayout {
+        .flexboxlayout,
+        .floatlayout {
             display: block;
             width: 100%;
             min-width: 100%;
